<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1A5356FF"
        tools:context=".Activities.GamesMenuActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="#5356FF"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo"
                tools:srcCompat="@drawable/logo"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:paddingStart="10dp"
                android:text="@string/app_name"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.509" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_100sdp"
            app:layout_constraintTop_toBottomOf="@id/constraintLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEightQueens"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/eight_queens_puzzle"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp"
                android:backgroundTint="#5356FF"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnTicTacToe"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/tic_tac_toe"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp"
                android:backgroundTint="#5356FF"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnIdentifyShortestPath"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/identify_shortest_path"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp"
                android:backgroundTint="#5356FF"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRememberPosition"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/remeber_the_position"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp"
                android:backgroundTint="#5356FF"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPredictPosition"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/predict_the_position"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp"
                android:backgroundTint="#5356FF"/>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>