<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.Games.Game2_TicTacToe.UIs.Game2Activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#5356FF"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo"
            tools:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:paddingStart="10dp"
            android:text="@string/tic_tac_toe"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.509" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/homeBtn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:backgroundTint="@color/white"
            android:fontFamily="sans-serif"
            android:text="@string/home"
            android:textAllCaps="true"
            android:textColor="#5356FF"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            app:cornerRadius="5dp"
            app:elevation="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.946"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_marginBottom="25dp"
        android:layout_above="@id/layout_board"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/black"
        tools:text="Computer Won"
        android:id="@+id/text_view_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" app:fontFamily="casual" android:textStyle="bold"
        android:textAllCaps="false" android:textSize="30sp"/>

    <GridLayout
        android:padding="16dp"
        android:alignmentMode="alignBounds"
        android:useDefaultMargins="true"
        android:layout_centerInParent="true"
        android:rowCount="3"
        android:columnCount="3"
        android:id="@+id/layout_board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:backgroundTint="#5356FF"
        android:fontFamily="sans-serif"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        android:id="@+id/btnReset"
        android:textAllCaps="false"
        android:text="@string/restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
